--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,81 +1,50 @@
-version: "3.2"
+version: '3.8'
+
 services:
-  api:
-    image: flask_api
-    container_name: ml_api
-    build:
-      context: ./api
-      target: build
+  postgres: # We can choose which name to put here
+    image: postgres 
+    container_name: ml_app_postgres # Name of the container
+    environment: # Environment variables (could also be in a .env)
+      - POSTGRES_USER=anyone_ai
+      - POSTGRES_PASSWORD=anyone_ai
+      - POSTGRES_DB=ml_app
     ports:
-      - "8000:5000"
-    depends_on:
-      - redis
-      - model
+      - "5432:5432" # local port:container port
     volumes:
-      - ./api/populate_db.py:/src/populate_db.py
-      - ./uploads:/src/uploads
-    environment:
-      POSTGRES_DB: $POSTGRES_DB
-      POSTGRES_USER: $POSTGRES_USER
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-      DATABASE_HOST: $DATABASE_HOST
-      SECRET_KEY: $SECRET_KEY
-    networks:
-      - shared_network
+      - pgdata:/var/lib/postgresql/data # Where to save all data for this service
 
   redis:
-    image: redis:6.2.6
-    networks:
-      - shared_network
-
-  db:
-    image: postgres:latest
-    container_name: postgres_db
-    environment:
-      POSTGRES_DB: $POSTGRES_DB
-      POSTGRES_USER: $POSTGRES_USER
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+    image: redis/redis-stack:latest
+    container_name: redis-stack
     ports:
-      - "5432:5432"
-    networks:
-      - shared_network
+      - "6379:6379" # One for database
+      - "8001:8001" # One for message broker
 
-
-  model:
-    image: ml_service
-    container_name: ml_service
+  ml_app:
     build:
-      context: ./model
-      dockerfile: ./Dockerfile
+      context: ./ml_api # Root path where the Dockerfile is located
+      dockerfile: Dockerfile # Name of the Dockerfile (custom service, not a base one)
     depends_on:
+      - postgres
       - redis
-    volumes:
-      - ./model/ml_service.py:/src/ml_service.py
-      - ./uploads:/src/uploads
-    networks:
-      - shared_network
-
-  ui:
-    image: ml_ui
-    container_name: ml_ui
-    build:
-      context: ./ui
-      target: build
+      - model_service
     ports:
-      - "9090:9090"
+      - "8000:8000"
+
+  model_service:
+    build:
+      context: ./model_service
+      dockerfile: Dockerfile
     depends_on:
-      - api
-    environment:
-      - API_HOST=api
-      - API_PORT=5000
-    networks:
-      - shared_network
-
-networks:
-  shared_network:
-    external: true
-
+      - postgres
+      - redis
+  
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "9000:9000"
+      
 volumes:
-  postgres_data:
+  pgdata:
